Added a Fortran test-code to drive the functionality of the library from the Fortran side of the API. The code uses a C function pair that is meant to assign a pointer to the overlap function, which is written in C in this case. IN 2017/05/01

--- a/Makefile.in
+++ b/Makefile.in
@@ -5,6 +5,8 @@ CC = gcc -D_GNU_SOURCE
 MPICC = mpicc  -D_GNU_SOURCE
 MPICXX = mpicxx  -D_GNU_SOURCE
 COPTS = -g -fPIC -O0 -Wall -Wstrict-aliasing  -fno-strict-aliasing
+MPIF90 = mpif90  -D_GNU_SOURCE
+FOPTS = -g -fPIC -O0 -Wall -fbounds-check
 LOPTS = 
 
 ### (build the following dependency with the same compilers if possible)
